--- a/css task/fast task.html
+++ b/css task/fast task.html
@@ -1,76 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>speed task</title>
-    <STYle>
-        *{
-            font-family:Arial, Helvetica, sans-serif;
-        }
-      body{
+    <style>
+      * {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      body {
         background-image: url(https://i.pinimg.com/474x/5a/ff/20/5aff2003d8bc613b05f5c3f473e94ea8.jpg);
         background-repeat: no-repeat;
         background-size: cover;
-     }
-        h1{
-            color:white;
-        }
-        h2{
-            color: rgb(233, 18, 183);
-        }
-        p{
-            text-align: center;
-            margin: 30px;
-            margin-left: 30px;
-            margin-right: 30px;
-            padding-left: 50px;
-            padding-right: 50px;
-            color: white;
-        }
-        img{
-            height: 80px;
-            width: 80px;
-        }
-        .justify{
-            display: flex;
-            flex-direction: row;
-            align-items: baseline;
-            justify-content:space-evenly;
-            margin-top: 70px;
-
-        }        
-        .around{
-            display: flex;
-            flex-direction: row;
-            align-items: baseline;
-            justify-content: space-evenly;
-            margin-top: 40px;
-            margin-left: 90px;
-            margin-right: 90px;
-
-        }
-    </STYle>
-</head>
-<body>
+      }
+      h1 {
+        color: white;
+      }
+      h2 {
+        color: rgb(233, 18, 183);
+      }
+      p {
+        text-align: center;
+        margin: 30px;
+        margin-left: 30px;
+        margin-right: 30px;
+        padding-left: 50px;
+        padding-right: 50px;
+        color: white;
+      }
+      img {
+        height: 80px;
+        width: 80px;
+      }
+      .justify {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+        justify-content: space-evenly;
+        margin-top: 70px;
+      }
+      .around {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+        justify-content: space-evenly;
+        margin-top: 40px;
+        margin-left: 90px;
+        margin-right: 90px;
+      }
+    </style>
+  </head>
+  <body>
     <h1 align="center">OUR LATEST TECHNOLOGY &</h1>
-    <H2 align="center">INTERESTING FEATURE</H2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt architecto, eligendi corrupti cum dolorum voluptas recusandae fugiat id iure unde dolore debitis consequatur at illo, est quia, repudiandae tempora facere!</p>
-    
+    <h2 align="center">INTERESTING FEATURE</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt architecto,
+      eligendi corrupti cum dolorum voluptas recusandae fugiat id iure unde
+      dolore debitis consequatur at illo, est quia, repudiandae tempora facere!
+    </p>
+
     <div class="justify">
-        <div class=""> <img src="./img/instagram.png" alt="instagram"></div>
-        <div class=""><img src="./img/linkedin.png" alt="linkedin"></div>
-        <div class=""><img src="./img/messenger.png" alt="messenger"></div>
-        <div class=""><img src="./img/search.png" alt="search"></div>
-        <div class=""><img src="./img/slack.png" alt="slack"></div>
+      <div class=""><img src="./img/instagram.png" alt="instagram" /></div>
+      <div class=""><img src="./img/linkedin.png" alt="linkedin" /></div>
+      <div class=""><img src="./img/messenger.png" alt="messenger" /></div>
+      <div class=""><img src="./img/search.png" alt="search" /></div>
+      <div class=""><img src="./img/slack.png" alt="slack" /></div>
     </div>
     <div class="around">
-        <div class="6"><img src="./img/tik-tok.png" alt="tik-tok"></div>
-        <div class="7"><img src="./img/twitter.png" alt="twitter"></div>
-        <div class="8"><img src="./img/whatsapp.png" alt="whatsapp"></div>
-        <div class="9"><img src="./img/youtube.png" alt="youtube"></div>
+      <div class="6"><img src="./img/tik-tok.png" alt="tik-tok" /></div>
+      <div class="7"><img src="./img/twitter.png" alt="twitter" /></div>
+      <div class="8"><img src="./img/whatsapp.png" alt="whatsapp" /></div>
+      <div class="9"><img src="./img/youtube.png" alt="youtube" /></div>
     </div>
-   
-</body>
+  </body>
 </html>
