--- a/bootstrap  assesment/index.html
+++ b/bootstrap  assesment/index.html
@@ -314,19 +314,19 @@
                                   <h5 class="text-center"><a href="">"Sustainability</a></h5>
                               </div>
                  <div class="col-sm-6">
-                                  <h5 class="text-center"><a href="/about-us">"About Us</a></h5>
+                                  <h5 class="text-center"><a target="_blank"  href="/about-us">"About Us</a></h5>
                               </div>
                  <div class="col-sm-6">
-                                  <h5 class="text-center"><a href="/investors">"Investors</a></h5>
+                                  <h5 class="text-center"><a target="_blank"  href="/investors">"Investors</a></h5>
                               </div>
                  <div class="col-sm-6">
-                                  <h5 class="text-center"><a href="/newsroom">"Newsroom</a></h5>
+                                  <h5 class="text-center"><a target="_blank"  href="/newsroom">"Newsroom</a></h5>
                               </div>
                               <div class="col-sm-6">
-                                  <h5 class="text-center"><a href="http://careers.adani.com" target="_blank">"Careers</a></h5>
+                                  <h5 class="text-center"><a target="_blank"  href="http://careers.adani.com" target="_blank">"Careers</a></h5>
                               </div>
                  <div class="col-sm-6">
-                                  <h5 class="text-center"><a href="/contact-us">"Contact Us</a></h5>
+                                  <h5 class="text-center"><a  target="_blank" href="/contact-us">"Contact Us</a></h5>
                               </div>
   
                       </div>
