assesment complet with condition

--- a/java script restaurent menu assesment/restaurent menu.html
+++ b/java script restaurent menu assesment/restaurent menu.html
@@ -1,80 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>restauvsvsrent menu</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>~~Resturent Booking~~</h1>
-    </header>
-<section id="sec-1">
-    <div class="data col-30">
-    <table  class="form-tab" >
-    <form method="post">
-        <tr>
-            <td><label for="Choise">Choise of booking:</label></td>
-            <td>
-                <select name="" id="">
-                    <option value="choiseofbooking">Choice of booking</option>
-                    <option value="fullday">Full day booking</option>
-              <option value="halfday">Half day booking</option>
-              <option value="hourly">Hourly booking</option>
-            </select>
-        </td>
-    </tr>
-    <tr>
-        <td><label for="name">Name  :</label></td>
-        <td><input type="text" placeholder="input your Name" id="uname" name="uname" required></td>
-    </tr>
-        <tr>
-            <td><label for="mobileno">Mobile Number  :</label></td>
-            <td><input type="number" placeholder="+91" id="mobileno" name="mobileno" required></td>
-        </tr>
-        <tr>
-            <td><label for="mail">Email  :</label></td>
-            <td><input type="email" placeholder="input your mail" id="mail" name="mail" required></td>
-        </tr>
-        <tr>
-            <td><label for="person">No of person  :</label></td>
-            <td><input type="number" placeholder="number of person" id="person" name="person" required></td>
-        </tr>
-        <tr>
-            <td><label for="a_date">Date  :</label></td>
-            <td><input type="date" name="a_date" id="a_date" required></td>
-        </tr>
-        <tr>
-            <td><label for="a_time">Time  :</label></td>
-            <td><input type="time" name="a_time" id="a_time" required></td>
-        </tr>
-        <tr>
-            <td><label for="a_slot">Slot  :</label></td>
-            <td>
-                <select name="a_slot" id="a_slot">
-                    <option value="halfday">Book Your Slot</option>
-                    <option value="breakfast">Breakfast</option>
-                    <option value="lunch">Lunch</option>
-                    <option value="dinner">Dinner</option>
-                  </select>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <input type="submit" id="button" value="Submit">
-            </td>
 
-        </tr>
-      </form>
-    </table>
-</div>
-<!-- result -->
-    <div class="result col-70">
-        
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>restauvsvsrent menu</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <h1>~~Resturent Booking~~</h1>
+  </header>
+  <section id="sec-1">
+    <div class="data col-30">
+      <table class="form-tab">
+        <form method="post">
+          <tr>
+            <td><label for="bookingOption">Choise of booking:</label></td>
+            <td>
+              <select name="" id="bookingOption">
+                <option>Choice of booking</option>
+                <option value="a1">Full day booking</option>
+                <option value="a2">Half day booking</option>
+                <option value="a3">Hourly booking</option>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td><label for="uname">Name :</label></td>
+            <td>
+              <input type="text" placeholder="input your Name" id="uname" name="uname" required />
+            </td>
+          </tr>
+          <tr>
+            <td><label for="mobileno">Mobile Number :</label></td>
+            <td>
+              <input type="number" placeholder="+91" id="mobileno" name="mobileno" required />
+            </td>
+          </tr>
+          <tr>
+            <td><label for="mail">Email :</label></td>
+            <td>
+              <input type="email" placeholder="input your mail" id="mail" name="mail" required />
+            </td>
+          </tr>
+          <tr>
+            <td><label for="person">No of person :</label></td>
+            <td>
+              <input type="number" placeholder="number of person" id="person" name="person" required />
+            </td>
+          </tr>
+          <!-- <tr>
+            <td><label for="a_date">Date :</label></td>
+            <td><input type="date" name="a_date" id="a_date" required /></td>
+          </tr>
+          <tr>
+            <td><label for="a_time">Time :</label></td>
+            <td><input type="time" name="a_time" id="a_time" required /></td>
+          </tr>
+          <tr>
+            <td><label for="a_slot">Slot :</label></td>
+            <td>
+              <select name="a_slot" id="a_slot">
+                <option value="halfday">Book Your Slot</option>
+                <option value="breakfast">Breakfast</option>
+                <option value="lunch">Lunch</option>
+                <option value="dinner">Dinner</option>
+              </select>
+            </td>
+          </tr> -->
+          <tr id="butTon">
+            <td colspan="2">
+              <input type="submit" id="button" value="Submit" />
+            </td>
+          </tr>
+        </form>
+      </table>
     </div>
-</section>
-<script src="restaurent.js"></script>
+    <!-- result -->
+    <div class="result col-70"></div>
+  </section>
+  <script src="restaurent.js"></script>
 </body>
+
 </html>
